; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..depsibxmibxm.c_channel_auto_vibrato.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..depsibxmibxm.c_channel_auto_vibrato.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.channel = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.channel*)* @channel_auto_vibrato to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @channel_auto_vibrato(%struct.channel* %0) #0 {
  %2 = alloca %struct.channel*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.channel* %0, %struct.channel** %2, align 8
  %8 = load %struct.channel*, %struct.channel** %2, align 8
  %9 = getelementptr inbounds %struct.channel, %struct.channel* %8, i32 0, i32 2
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = and i32 %12, 127
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp sgt i32 %14, 0
  br i1 %15, label %16, label %70

16:                                               ; preds = %1
  %17 = load %struct.channel*, %struct.channel** %2, align 8
  %18 = getelementptr inbounds %struct.channel, %struct.channel* %17, i32 0, i32 2
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, 127
  store i32 %22, i32* %3, align 4
  %23 = load %struct.channel*, %struct.channel** %2, align 8
  %24 = getelementptr inbounds %struct.channel, %struct.channel* %23, i32 0, i32 2
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = and i32 %27, 127
  store i32 %28, i32* %4, align 4
  %29 = load %struct.channel*, %struct.channel** %2, align 8
  %30 = getelementptr inbounds %struct.channel, %struct.channel* %29, i32 0, i32 2
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 3
  %33 = load i32, i32* %32, align 4
  store i32 %33, i32* %5, align 4
  %34 = load %struct.channel*, %struct.channel** %2, align 8
  %35 = getelementptr inbounds %struct.channel, %struct.channel* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load i32, i32* %3, align 4
  %38 = icmp slt i32 %36, %37
  br i1 %38, label %39, label %47

39:                                               ; preds = %16
  %40 = load i32, i32* %7, align 4
  %41 = load %struct.channel*, %struct.channel** %2, align 8
  %42 = getelementptr inbounds %struct.channel, %struct.channel* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 8
  %44 = mul nsw i32 %40, %43
  %45 = load i32, i32* %3, align 4
  %46 = sdiv i32 %44, %45
  store i32 %46, i32* %7, align 4
  br label %47

47:                                               ; preds = %39, %16
  %48 = load %struct.channel*, %struct.channel** %2, align 8
  %49 = load %struct.channel*, %struct.channel** %2, align 8
  %50 = getelementptr inbounds %struct.channel, %struct.channel* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = load i32, i32* %4, align 4
  %53 = mul nsw i32 %51, %52
  %54 = ashr i32 %53, 2
  %55 = load i32, i32* %5, align 4
  %56 = add nsw i32 %55, 4
  %57 = call i32 @channel_waveform(%struct.channel* %48, i32 %54, i32 %56)
  store i32 %57, i32* %6, align 4
  %58 = load i32, i32* %6, align 4
  %59 = load i32, i32* %7, align 4
  %60 = mul nsw i32 %58, %59
  %61 = ashr i32 %60, 8
  %62 = load %struct.channel*, %struct.channel** %2, align 8
  %63 = getelementptr inbounds %struct.channel, %struct.channel* %62, i32 0, i32 1
  %64 = load i32, i32* %63, align 4
  %65 = add nsw i32 %64, %61
  store i32 %65, i32* %63, align 4
  %66 = load %struct.channel*, %struct.channel** %2, align 8
  %67 = getelementptr inbounds %struct.channel, %struct.channel* %66, i32 0, i32 0
  %68 = load i32, i32* %67, align 8
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %67, align 8
  br label %70

70:                                               ; preds = %47, %1
  ret void
}

declare dso_local i32 @channel_waveform(%struct.channel*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
